Trying to fix error in Alpha page

--- a/1.Alpha.md
+++ b/1.Alpha.md
@@ -5,7 +5,7 @@
 - *2V*解题思路：指定直线上下方可各画一个60°角。[Ref](solved/1.1.2V.png) [GIF](GIF/1.1.2V.gif)
 
 
-<A NAME="1.2"></A>
+<---<A NAME="1.2"></A>-->
 ##### 1.2 Perpendicular Bisector *Goal: 3E*
 - [Diagram](images/level/perp-bisector.png) [Fact](images/hints/Fact-RhombusDiagonals.png) 
 + *3L3E*步骤：圆，圆，线
