Remaining View translations

--- a/12.Mu.md
+++ b/12.Mu.md
@@ -1,5 +1,5 @@
 ##### 12.1 Circle Tangent to Line and Circle *目标：4L 8E 2V*
-- [查看题目](images/level/circle-tangent-c-l.png) 
+- [View](images/level/circle-tangent-c-l.png) 
 + *4L*步骤：垂线，定圆，垂分，圆
 - *4L*解题思路：【待补充】。[参考图](solved/12.1.4L.png)
 + *8E*步骤：垂线，圆，线，圆，线，圆
@@ -8,7 +8,7 @@
 
 
 ##### 12.2 Equilateral Triangle - 2 *目标：7L 8E 2V*
-- [查看题目](images/level/equilateral3.png) 
+- [View](images/level/equilateral3.png) 
 + *7L*步骤：垂线，圆，圆，线，垂线，线，线
 - *7L*解题思路：【待补充】。[参考图](solved/12.2.7L.png)
 + *8E*步骤：圆，圆，圆，线，线，圆，线，线
@@ -17,7 +17,7 @@
 
 
 ##### 12.3 Square in Triangle *目标：6L 12E*
-- [查看题目](images/level/square-in-triangle.png) 
+- [View](images/level/square-in-triangle.png) 
 + *6L*步骤：垂线，圆，线，垂线，垂线，垂线
 - *6L*解题思路：【待补充】。[参考图](solved/12.3.6L.png)
 + *12E*步骤：垂线，圆，线，垂线，圆，圆，线，线
@@ -25,7 +25,7 @@
 
 
 ##### 12.4 Point Equidistant from Side of Angle and Point *目标：5L 8E 2V*
-- [查看题目](images/level/equidistant2.png) 
+- [View](images/level/equidistant2.png) 
 + *5L*步骤：线，垂线，圆，线，平行，垂线
 - *5L*解题思路：【待补充】。[参考图](solved/12.4.5L.png)
 + *8E*步骤：圆，圆，线，圆，圆，线，圆，线
@@ -34,7 +34,7 @@
 
 
 ##### 12.5 Circle Tangent to Two Circles *目标：4L 8E 2V*
-- [查看题目](images/level/circle-tangent-c-c.png) 
+- [View](images/level/circle-tangent-c-c.png) 
 + *4L*步骤：线，定圆，垂分，圆
 - *4L*解题思路：【待补充】。[参考图](solved/12.5.4L.png)
 + *8E*步骤：线，平行，线，线，圆
@@ -43,7 +43,7 @@
 
 
 ##### 12.6 Circle Through Two Points and Tangent to Line *目标：6L 10E 2V*
-- [查看题目](images/level/circle-tangent-p-p-l.png) 
+- [View](images/level/circle-tangent-p-p-l.png) 
 + *6L*步骤：垂分，垂线，圆，线，线，平行，圆
 - *6L*解题思路：【待补充】。[参考图](solved/12.6.6L.png)
 + *10E*步骤：垂分，圆，圆，线，圆，圆，线，圆
@@ -52,7 +52,7 @@
 
 
 ##### 12.7 Triangle by Tangent Point on Hypotenuse *目标：6L 9E 2V*
-- [查看题目](images/level/r-tr-by-hyp-and-tangent-pt.png) 
+- [View](images/level/r-tr-by-hyp-and-tangent-pt.png) 
 + *6L*步骤：垂分，圆，垂分，圆，线，线
 - *6L*解题思路：【待补充】。[参考图](solved/12.7.6L.png)
 + *9E*步骤：垂分，圆，圆，线，圆，线，线
