--- a/4.Delta.md
+++ b/4.Delta.md
@@ -1,12 +1,12 @@
 ##### 4.1 Double Segment *目标：3L 3E 2V*
-- [查看题目](images/level/c-double-seg.png) 
+- [View](images/level/c-double-seg.png) 
 + *3L3E*步骤：圆，圆，圆，点
 - *3L3E*解题思路：【待补充】。[参考图](solved/4.1.3L3E.png)
 - *2V*解题思路：【待补充】。[参考图](solved/4.1.2V.png)
 
 
 ##### 4.2 Angle of 60° - 2 *目标：3L 4E 2V*
-- [查看题目](images/level/angle60-drop.png) 
+- [View](images/level/angle60-drop.png) 
 + *3L*步骤：圆，圆，垂分
 - *3L*解题思路：【待补充】。[参考图](solved/4.2.3L.png)
 + *4E*步骤：圆，圆，圆，线
@@ -15,7 +15,7 @@
 
 
 ##### 4.3 Circumscribed Equilateral Triangle *目标：5L 6E*
-- [查看题目](images/level/equilateral-about-circle.png) 
+- [View](images/level/equilateral-about-circle.png) 
 + *5L*步骤：线，垂线，圆，线，线
 - *5L*解题思路：【待补充】。[参考图](solved/4.3.5L.png)
 + *6E*步骤：线，圆，圆，线，线，线
@@ -23,7 +23,7 @@
 
 
 ##### 4.4 Equilateral Triangle in Circle *目标：5L 6E*
-- [查看题目](images/level/equilateral-in-circle.png) 
+- [View](images/level/equilateral-in-circle.png) 
 + *5L*步骤：圆，圆，垂分，垂分，线
 - *5L*解题思路：【待补充】。[参考图](solved/4.4.5L.png)
 + *6E*步骤：圆，圆，圆，线，线，线
@@ -31,25 +31,25 @@
 
 
 ##### 4.5 Cut Two Rectangles *目标：5L 5E*
-- [查看题目](images/level/cut2-rectangles.png) [知识点](images/hints/Fact-RectCenter.png) 
+- [View](images/level/cut2-rectangles.png) [知识点](images/hints/Fact-RectCenter.png) 
 + *5L5E*步骤：线，线，线，线，线
 - *5L5E*解题思路：【待补充】。[参考图](solved/4.5.5L5E.png)
 
 
 ##### 4.6 Square Root of 2 *目标：3L 5E*
-- [查看题目](images/level/sqrt2.png) [知识点](images/hints/Fact-Pythagoras.png) [3L5E草图](images/hints/Draft-Sqrt2.png) 
+- [View](images/level/sqrt2.png) [知识点](images/hints/Fact-Pythagoras.png) [3L5E草图](images/hints/Draft-Sqrt2.png) 
 + *3L5E*步骤：垂线，圆，圆，点
 - *3L5E*解题思路：【待补充】。[参考图](solved/4.6.3L5E.png)
 
 
 ##### 4.7 Square Root of 3 *目标：3L 3E*
-- [查看题目](images/level/sqrt3.png) [知识点](images/hints/Fact-Pythagoras.png) [3L3E草图](images/hints/Draft-Sqrt3.png) 
+- [View](images/level/sqrt3.png) [知识点](images/hints/Fact-Pythagoras.png) [3L3E草图](images/hints/Draft-Sqrt3.png) 
 + *3L3E*步骤：圆，圆，圆，点
 - *3L3E*解题思路：【待补充】。[参考图](solved/4.7.3L3E.png)
 
 
 ##### 4.8 Angle of 15° *目标：3L 5E 2V*
-- [查看题目](images/level/angle15.png) [知识点](images/hints/Fact-CentralAngle.png) 
+- [View](images/level/angle15.png) [知识点](images/hints/Fact-CentralAngle.png) 
 + *3L*步骤：圆，圆，角分
 - *3L*解题思路：【待补充】。[参考图](solved/4.8.3L.png)
 + *5E*步骤：圆，圆，圆，线，线
