--- a/6.Zeta.md
+++ b/6.Zeta.md
@@ -1,5 +1,5 @@
 ##### 6.1 Point Reflection *目标：4L 5E*
-- [查看题目](images/level/pt-symmetry.png) [知识点](images/hints/Fact-PointSymmetry.png) 
+- [View](images/level/pt-symmetry.png) [知识点](images/hints/Fact-PointSymmetry.png) 
 + *4L*步骤：线，圆，平行，线，点
 - *4L*解题思路：【待补充】。[参考图](solved/6.1.4L.png)
 + *5E*步骤：圆，圆，线，线，线
@@ -7,13 +7,13 @@
 
 
 ##### 6.2 Reflection *目标：5L 5E*
-- [查看题目](images/level/mirror-seg.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
+- [View](images/level/mirror-seg.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
 + *5L5E*步骤：圆，圆，圆，圆，线
 - *5L5E*解题思路：【待补充】。[参考图](solved/6.2.5L5E.png)
 
 
 ##### 6.3 Copy Segment *目标：3L 4E 2V*
-- [查看题目](images/level/shift-segment.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
+- [View](images/level/shift-segment.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
 + *3L*步骤：线，垂分，圆，点
 - *3L*解题思路：【待补充】。[参考图](solved/6.3.3L.png)
 + *4E*步骤：线，圆，圆，圆，点
@@ -22,13 +22,13 @@
 
 
 ##### 6.4 Given Angle Bisector *目标：4L 4E*
-- [查看题目](images/level/given-angle-bisector.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
+- [View](images/level/given-angle-bisector.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
 + *4L4E*步骤：圆，圆，线，线
 - *4L4E*解题思路：【待补充】。[参考图](solved/6.4.4L4E.png)
 
 
 ##### 6.5 Non-collapsing Compass *目标：4L 5E*
-- [查看题目](images/level/circle-by-radius.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
+- [View](images/level/circle-by-radius.png) [知识点](images/hints/Fact-MirrorSymmetry.png) 
 + *4L*步骤：线，平行，平行，圆
 - *4L*解题思路：【待补充】。[参考图](solved/6.5.4L.png)
 + *5E*步骤：圆，圆，圆，圆，圆
@@ -36,7 +36,7 @@
 
 
 ##### 6.6 Translate Segment *目标：2L 6E 2V*
-- [查看题目](images/level/translate-segment.png) [6E草图](images/hints/Draft-TranslateSegment.png)
+- [View](images/level/translate-segment.png) [6E草图](images/hints/Draft-TranslateSegment.png)
 + *2L*步骤：定圆，平行，点
 - *2L*解题思路：【待补充】。[参考图](solved/6.6.2L.png)
 + *6E*步骤：圆，圆，圆，圆，线，圆，点
@@ -45,14 +45,14 @@
 
 
 ##### 6.7 Triangle by Three Sides *目标：4L 12E 4V*
-- [查看题目](images/level/triangle-by-sides.png) 
+- [View](images/level/triangle-by-sides.png) 
 + *4L12E*步骤：定圆，定圆，线，线
 - *4L12E*解题思路：【待补充】。[参考图](solved/6.7.4L12E.png)
 - *4V*解题思路：【待补充】。[参考图](solved/6.7.4V.png)
 
 
 ##### 6.8 Hypotenuse and Leg *目标：5L 9E 4V*
-- [查看题目](images/level/hypotenuse-and-leg.png) 
+- [View](images/level/hypotenuse-and-leg.png) 
 + *5L*步骤：定圆，垂分，圆，线，线
 - *5L*解题思路：【待补充】。[参考图](solved/6.8.5L.png)
 + *9E*步骤：定圆，圆，圆，圆，线，线
@@ -61,7 +61,7 @@
 
 
 ##### 6.9 Parallelogram *目标：5L 8E*
-- [查看题目](images/level/parallelogram-by-s-p.png) 
+- [View](images/level/parallelogram-by-s-p.png) 
 + *5L*步骤：垂分，定圆，平行，线，线
 - *5L*解题思路：【待补充】。[参考图](solved/6.9.5L.png)
 + *8E*步骤：线，圆，圆，线，圆，线，圆，线
