--- a/1.Alpha.md
+++ b/1.Alpha.md
@@ -1,5 +1,5 @@
 ##### 1.1 Angle of 60° *Goal: 3E 2V*
-- [Diagram](images/level/angle60.png) [Fact](images/hints/Fact-Equilateral.png) [3L3E Draft](images/hints/Draft-Angle60.png) 
+- [View](images/level/angle60.png) [Fact](images/hints/Fact-Equilateral.png) [3L3E Draft](images/hints/Draft-Angle60.png) 
 + *3L3E*步骤：圆，圆，线
 + *3L3E*解题思路：等边三角形内角为60°。[Ref](solved/1.1.3L3E.png) [GIF](GIF/1.1.3L3E.gif)
 - *2V*解题思路：指定直线上下方可各画一个60°角。[Ref](solved/1.1.2V.png) [GIF](GIF/1.1.2V.gif)
@@ -7,32 +7,32 @@
 
 <---<A NAME="1.2"></A>-->
 ##### 1.2 Perpendicular Bisector *Goal: 3E*
-- [Diagram](images/level/perp-bisector.png) [Fact](images/hints/Fact-RhombusDiagonals.png) 
+- [View](images/level/perp-bisector.png) [Fact](images/hints/Fact-RhombusDiagonals.png) 
 + *3L3E*步骤：圆，圆，线
 - *3L3E*解题思路：菱型的两条对角线垂直且平分对方。[Ref](solved/1.2.3L3E.png) [GIF](GIF/1.2.3L3E.gif)
 
 
 ##### 1.3 Midpoint *Goal: 4E*
-- [Diagram](images/level/midpoint.png) 
+- [View](images/level/midpoint.png) 
 + *2L4E*步骤：线，垂分，点
 - *2L4E*解题思路：中垂线和线段相交于中点。[Ref](solved/1.3.2L4E.png) [GIF](GIF/1.3.2L4E.gif)
 
 
 ##### 1.4 Circle in Square *Goal: 5E*
-- [Diagram](images/level/circle-in-square.png) [Fact1](images/hints/Fact-SquareSymmetry.png) [Fact2](images/hints/Fact-Tangent.png) 
+- [View](images/level/circle-in-square.png) [Fact1](images/hints/Fact-SquareSymmetry.png) [Fact2](images/hints/Fact-Tangent.png) 
 + *3L5E*步骤：线，垂分，圆
 - *3L5E*解题思路：正方形内接圆，半径为边长的一半，圆心为正方形中点。[Ref](solved/1.4.3L5E.png) [GIF](GIF/1.4.3L5E.gif)
 
 
 ##### 1.5 Rhombus in Rectangle *Goal: 5E 2V*
-- [Diagram](images/level/rhombus-in-rect.png) [Fact](images/hints/Fact-RhombusDiagonals.png) [3L5E Draft](images/hints/Draft-RhombusInRect.png) 
+- [View](images/level/rhombus-in-rect.png) [Fact](images/hints/Fact-RhombusDiagonals.png) [3L5E Draft](images/hints/Draft-RhombusInRect.png) 
 + *3L5E*步骤：垂分，线，线
 - *3L5E*解题思路：菱型的两条对角线垂直且平分对方，两个顶点的垂分线必然通过另个两个顶点。[Ref](solved/1.5.3L5E.png) [Ref](GIF/1.5.3L5E.gif)
 - *2V*解题思路：可以用矩形的任两个对角顶点做菱形。[Ref](solved/1.5.2V.png) [GIF](GIF/1.5.2V.gif)
 
 
 ##### 1.6 Circle Center *Goal: 5E*
-- [Diagram](images/level/circle-center.png) [Fact](images/hints/Fact-CircumCircle.png) 
+- [View](images/level/circle-center.png) [Fact](images/hints/Fact-CircumCircle.png) 
 + *2L*步骤：垂分，垂分，点
 - *2L*解题思路：圆上任意弦的中垂线必然通过圆心。[Ref](solved/1.6.2L.png) [GIF](GIF/1.6.2L.gif)
 + *5E*步骤：圆，圆，圆，线，线，点
