--- a/13.Nu.md
+++ b/13.Nu.md
@@ -1,54 +1,54 @@
 ##### 13.1 Midpoint\* *目标：6L 6E*
-- [查看题目](images/level/c-midpoint.png) 
+- [View](images/level/c-midpoint.png) 
 + *6L6E*步骤：圆，圆，圆，圆，圆，圆，点，点
 - *6L6E*解题思路：【待补充】。[参考图](solved/13.1.6L6E.png)
 
 
 ##### 13.2 Copy Circle *目标：4L 4E*
-- [查看题目](images/level/c-translate-circle.png) 
+- [View](images/level/c-translate-circle.png) 
 + *4L4E*步骤：圆，圆，圆，圆
 - *4L4E*解题思路：【待补充】。[参考图](solved/13.2.4L4E.png)
 
 
 ##### 13.3 Line-Circle Intersection *目标：4L 4E*
-- [查看题目](images/level/c-intersect-c-l.png) 
+- [View](images/level/c-intersect-c-l.png) 
 + *4L4E*步骤：圆，圆，圆，圆，点，点
 - *4L4E*解题思路：【待补充】。[参考图](solved/13.3.4L4E.png)
 
 
 ##### 13.4 Three Equal Segments *目标：7L 7E*
-- [查看题目](images/level/equal-segments3.png) 
+- [View](images/level/equal-segments3.png) 
 + *7L7E*步骤：线，圆，圆，圆，线，圆，线
 - *7L7E*解题思路：【待补充】。[参考图](solved/13.4.7L7E.png)
 
 
 ##### 13.5 Tangent to Circle\* *目标：8L 8E 2V*
-- [查看题目](images/level/l-tangent.png) 
+- [View](images/level/l-tangent.png) 
 + *8L8E*步骤：线，线，线，线，线，线，线，线
 - *8L8E*解题思路：【待补充】。[参考图](solved/13.5.8L8E.png)
 - *2V*解题思路：【待补充】。[参考图](solved/13.5.2V.png)
 
 
 ##### 13.6 Napoleon's Problem *目标：6L 6E*
-- [查看题目](images/level/napoleon.png) 
+- [View](images/level/napoleon.png) 
 + *6L6E*步骤：圆，圆，圆，圆，圆，圆，点
 - *6L6E*解题思路：【待补充】。[参考图](solved/13.6.6L6E.png)
 
 
 ##### 13.7 Drop a Perpendicular\*\* *目标：10L 10E*
-- [查看题目](images/level/l-drop-perp2.png) 
+- [View](images/level/l-drop-perp2.png) 
 + *10L10E*步骤：线，线，线，线，线，线，线，线，线，线
 - *10L10E*解题思路：【待补充】。[参考图](solved/13.7.10L10E.png)
 
 
 ##### 13.8 Line-Circle Intersection\* *目标：9L 9E*
-- [查看题目](images/level/c-intersect-x.png) 
+- [View](images/level/c-intersect-x.png) 
 + *9L9E*步骤：圆，圆，圆，圆，圆，圆，圆，圆，圆，圆，点，点
 - *9L9E*解题思路：【待补充】。[参考图](solved/13.8.9L9E.png)
 
 
 ##### 13.9 Circle with Center on Line *目标：7L 9E 2V*
-- [查看题目](images/level/circle-tangent-c-pw-center-l.png) 
+- [View](images/level/circle-tangent-c-pw-center-l.png) 
 + *7L*步骤：垂线，圆，线，定圆，定圆，线，圆
 - *7L*解题思路：【待补充】。[参考图](solved/13.9.7L.png)
 + *9E*步骤：圆，线，圆，线，圆，线，圆，圆，线，圆
