--- a/5.Epsilon.md
+++ b/5.Epsilon.md
@@ -1,5 +1,5 @@
 ##### 5.1 Parallel Line *目标：2L 4E*
-- [查看题目](images/level/parallel.png) [知识点1](images/hints/Fact-RhombusSides.png) [知识点2](images/hints/Fact-RectCenter.png) 
+- [View](images/level/parallel.png) [知识点1](images/hints/Fact-RhombusSides.png) [知识点2](images/hints/Fact-RectCenter.png) 
 + *2L*步骤：垂线，垂线
 - *2L*解题思路：【待补充】。[参考图](solved/5.1.2L.png)
 + *4E*步骤：圆，线，圆，线
@@ -7,7 +7,7 @@
 
 
 ##### 5.2 Parallelogram by Three Vertices *目标：4L 8E 3V*
-- [查看题目](images/level/parallelogram3-v.png) 
+- [View](images/level/parallelogram3-v.png) 
 + *4L*步骤：线，线，平行，平行
 - *4L*解题思路：【待补充】。[参考图](solved/5.2.4L.png)
 + *8E*步骤：线，线，圆，圆，圆，圆，线，线
@@ -16,7 +16,7 @@
 
 
 ##### 5.3 Line Equidistant from Two Points - 1 *目标：2L 4E*
-- [查看题目](images/level/line-along-points.png) 
+- [View](images/level/line-along-points.png) 
 + *2L*步骤：线，平行
 - *2L*解题思路：【待补充】。[参考图](solved/5.3.2L.png)
 + *4E*步骤：圆，线，圆，线
@@ -24,13 +24,13 @@
 
 
 ##### 5.4 Line Equidistant from Two Points - 2 *目标：3L 5E*
-- [查看题目](images/level/line-between-points.png) 
+- [View](images/level/line-between-points.png) 
 + *3L5E*步骤：垂分，线，线
 - *3L5E*解题思路：【待补充】。[参考图](solved/5.4.3L5E.png)
 
 
 ##### 5.5 Arithmetic Mean of Trapezoid Bases *目标：2L 5E*
-- [查看题目](images/level/trapezoid-median.png) 
+- [View](images/level/trapezoid-median.png) 
 + *2L*步骤：垂线，垂分
 - *2L*解题思路：【待补充】。[参考图](solved/5.5.2L.png)
 + *5E*步骤：圆，圆，线，线，线
@@ -38,7 +38,7 @@
 
 
 ##### 5.6 Hash *目标：2L 4E 2V*
-- [查看题目](images/level/hash.png) [2L4E草图](images/hints/Draft-Hash.png) 
+- [View](images/level/hash.png) [2L4E草图](images/hints/Draft-Hash.png) 
 + *2L*步骤：线，平行
 - *2L*解题思路：【待补充】。[参考图](solved/5.6.2L.png)
 + *4E*步骤：圆，线，圆，线
@@ -47,7 +47,7 @@
 
 
 ##### 5.7 Shift Angle *目标：2L 6E*
-- [查看题目](images/level/shift-angle.png) 
+- [View](images/level/shift-angle.png) 
 + *2L*步骤：平行，平行
 - *2L*解题思路：【待补充】。[参考图](solved/5.7.2L.png)
 + *6E*步骤：线，圆，圆，圆，线，线
@@ -55,7 +55,7 @@
 
 
 ##### 5.8 Circumscribed Square *目标：6L 11E*
-- [查看题目](images/level/square-about-circle.png) 
+- [View](images/level/square-about-circle.png) 
 + *6L*步骤：垂线，垂线，垂线，圆，垂线，垂线
 - *6L*解题思路：【待补充】。[参考图](solved/5.8.6L.png)
 + *11E*步骤：垂线，圆，线，圆，圆，线，线，线，线
@@ -63,7 +63,7 @@
 
 
 ##### 5.9 Square in Square *目标：6L 7E*
-- [查看题目](images/level/square-in-square.png) [知识点](images/hints/Fact-PointSymmetry.png) 
+- [View](images/level/square-in-square.png) [知识点](images/hints/Fact-PointSymmetry.png) 
 + *6L*步骤：圆，平行，线，垂线，垂线，垂线
 - *6L*解题思路：【待补充】。[参考图](solved/5.9.6L.png)
 + *7E*步骤：线，线，圆，线，线，线，线
@@ -71,7 +71,7 @@
 
 
 ##### 5.10 Regular Hexagon *目标：7L 8E 2V*
-- [查看题目](images/level/hexagon-by-side.png) [知识点](images/hints/Fact-Hexagon.png) 
+- [View](images/level/hexagon-by-side.png) [知识点](images/hints/Fact-Hexagon.png) 
 + *7L*步骤：圆，圆，线，线，平行，平行，垂分
 - *7L*解题思路：【待补充】。[参考图](solved/5.10.7L.png)
 + *8E*步骤：圆，圆，圆，线，线，线，线，线
