--- a/7.Eta.md
+++ b/7.Eta.md
@@ -1,5 +1,5 @@
 ##### 7.1 Sum of Areas of Squares *目标：3L 6E*
-- [查看题目](images/level/sum-squares.png) 
+- [View](images/level/sum-squares.png) 
 + *3L*步骤：定圆，垂线，垂线
 - *3L*解题思路：【待补充】。[参考图](solved/7.1.3L.png)
 + *6E*步骤：线，圆，圆，线，线，线
@@ -7,7 +7,7 @@
 
 
 ##### 7.2 Annulus *目标：4L 5E*
-- [查看题目](images/level/annulus.png) [知识点](images/hints/Fact-CircleArea.png) 
+- [View](images/level/annulus.png) [知识点](images/hints/Fact-CircleArea.png) 
 + *4L*步骤：线，垂分，圆，圆
 - *4L*解题思路：【待补充】。[参考图](solved/7.2.4L.png)
 + *5E*步骤：线，圆，线，圆，圆
@@ -15,7 +15,7 @@
 
 
 ##### 7.3 Angle of 75° *目标：3L 5E 2V*
-- [查看题目](images/level/angle75.png) 
+- [View](images/level/angle75.png) 
 + *3L*步骤：圆，垂分，角分
 - *3L*解题思路：【待补充】。[参考图](solved/7.3.3L.png)
 + *5E*步骤：圆，圆，圆，线，线
@@ -24,26 +24,26 @@
 
 
 ##### 7.4 Line Equidistant from Three Points *目标：3L 7E 3V*
-- [查看题目](images/level/equidistant3.png) 
+- [View](images/level/equidistant3.png) 
 + *3L7E*步骤：线，垂线，垂分
 - *3L7E*解题思路：【待补充】。[参考图](solved/7.4.3L7E.png)
 - *3V*解题思路：【待补充】。[参考图](solved/7.4.3V.png)
 
 
 ##### 7.5 Heron's Problem *目标：4L 4E*
-- [查看题目](images/level/heron.png) [知识点](images/hints/Fact-MirrorSymmetry.png) [4L4E草图](images/hints/Draft-Heron.png) 
+- [View](images/level/heron.png) [知识点](images/hints/Fact-MirrorSymmetry.png) [4L4E草图](images/hints/Draft-Heron.png) 
 + *4L4E*步骤：圆，圆，线，线
 - *4L4E*解题思路：【待补充】。[参考图](solved/7.5.4L4E.png)
 
 
 ##### 7.6 Circumscribed Circle *目标：3L 7E*
-- [查看题目](images/level/circle3.png) [知识点](images/hints/Fact-CircumCircle.png) 
+- [View](images/level/circle3.png) [知识点](images/hints/Fact-CircumCircle.png) 
 + *3L7E*步骤：垂分，垂分，圆
 - *3L7E*解题思路：【待补充】。[参考图](solved/7.6.3L7E.png)
 
 
 ##### 7.7 Inscribed Circle *目标：4L 8E*
-- [查看题目](images/level/circle-in-triangle.png) [知识点](images/hints/Fact-Incircle.png) [8E草图](images/hints/Draft-CircleInTriangle.png)
+- [View](images/level/circle-in-triangle.png) [知识点](images/hints/Fact-Incircle.png) [8E草图](images/hints/Draft-CircleInTriangle.png)
 + *4L*步骤：角分，角分，垂线，圆
 - *4L*解题思路：【待补充】。[参考图](solved/7.7.4L.png)
 + *8E*步骤：圆，圆，圆，圆，圆，线，线，圆
