--- a/8.Theta.md
+++ b/8.Theta.md
@@ -1,17 +1,17 @@
 ##### 8.1 Minimum Perimeter - 1 *目标：6L 6E*
-- [查看题目](images/level/a-min-perimeter.png) 
+- [View](images/level/a-min-perimeter.png) 
 + *6L6E*步骤：圆，圆，圆，线，线，线
 - *6L6E*解题思路：【待补充】。[参考图](solved/8.1.6L6E.png)
 
 
 ##### 8.2 Third Proportional *目标：3L 3E*
-- [查看题目](images/level/3rd-proportional.png) 
+- [View](images/level/3rd-proportional.png) 
 + *3L3E*步骤：圆，圆，圆，点
 - *3L3E*解题思路：【待补充】。[参考图](solved/8.2.3L3E.png)
 
 
 ##### 8.3 Harmonic Mean of Trapezoid Bases *目标：3L 5E*
-- [查看题目](images/level/trapezoid-harm-mean.png) 
+- [View](images/level/trapezoid-harm-mean.png) 
 + *3L*步骤：线，线，平行
 - *3L*解题思路：【待补充】。[参考图](solved/8.3.3L.png)
 + *5E*步骤：线，线，圆，圆，线
@@ -19,19 +19,19 @@
 
 
 ##### 8.4 Drop a Perpendicular\* *目标：5L 5E*
-- [查看题目](images/level/l-drop-perp.png) 
+- [View](images/level/l-drop-perp.png) 
 + *5L5E*步骤：线，线，线，线，线
 - *5L5E*解题思路：【待补充】。[参考图](solved/8.4.5L5E.png)
 
 
 ##### 8.5 Midpoint\* *目标：5L 5E*
-- [查看题目](images/level/l-midpoint.png) 
+- [View](images/level/l-midpoint.png) 
 + *5L5E*步骤：线，线，线，线，线，点
 - *5L5E*解题思路：【待补充】。[参考图](solved/8.5.5L5E.png)
 
 
 ##### 8.6 Interior Angles *目标：2L 4E 2V*
-- [查看题目](images/level/interior-angles.png) 
+- [View](images/level/interior-angles.png) 
 + *2L*步骤：角分，垂线
 - *2L*解题思路：【待补充】。[参考图](solved/8.6.2L.png)
 + *4E*步骤：圆，圆，圆，线
@@ -40,7 +40,7 @@
 
 
 ##### 8.7 Regular Octagon *目标：9L 13E 2V*
-- [查看题目](images/level/octagon-by-side.png) 
+- [View](images/level/octagon-by-side.png) 
 + *9L*步骤：垂线，角分，垂线，角分，垂线，垂线，垂线，垂分，垂线
 - *9L*解题思路：【待补充】。[参考图](solved/8.7.9L.png)
 + *13E*步骤：圆，圆，线，圆，线，线，圆，圆，线，线，线，线，线
@@ -49,7 +49,7 @@
 
 
 ##### 8.8 Trisection by Trapezoid Diagonals *目标：3L 5E 2V*
-- [查看题目](images/level/trapezoid-cut3.png) 
+- [View](images/level/trapezoid-cut3.png) 
 + *3L*步骤：垂分，线，垂线
 - *3L*解题思路：【待补充】。[参考图](solved/8.8.3L.png)
 + *5E*步骤：线，圆，线，线，线
