--- a/9.Iota.md
+++ b/9.Iota.md
@@ -1,5 +1,5 @@
 ##### 9.1 Tangent of Circle *目标：4L 5E 2V*
-- [查看题目](images/level/tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
+- [View](images/level/tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
 + *4L*步骤：线，垂分，圆，线
 - *4L*解题思路：【待补充】。[参考图](solved/9.1.4L.png)
 + *5E*步骤：线，圆，圆，圆，线
@@ -8,7 +8,7 @@
 
 
 ##### 9.2 Outer Tangent *目标：6L 8E 2V*
-- [查看题目](images/level/outer-tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
+- [View](images/level/outer-tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
 + *6L*步骤：线，垂分，垂分，圆，圆，线
 - *6L*解题思路：【待补充】。[参考图](solved/9.2.6L.png)
 + *8E*步骤：线，圆，圆，线，圆，圆，线，线
@@ -17,7 +17,7 @@
 
 
 ##### 9.3 Inner Tangent *目标：6L 8E 2V*
-- [查看题目](images/level/inner-tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
+- [View](images/level/inner-tangent.png) [知识点1](images/hints/M.png) [知识点2](images/hints/e.png) 
 + *6L*步骤：线，垂分，垂分，圆，圆，线
 - *6L*解题思路：【待补充】。[参考图](solved/9.3.6L.png)
 + *8E*步骤：线，圆，圆，线，圆，圆，线，线
@@ -26,31 +26,31 @@
 
 
 ##### 9.4 Rotation 90° *目标：5L 9E*
-- [查看题目](images/level/90-rotation-c-c-w.png) 
+- [View](images/level/90-rotation-c-c-w.png) 
 + *5L9E*步骤：线，垂线，圆，圆，垂线，点
 - *5L9E*解题思路：【待补充】。[参考图](solved/9.4.5L9E.png)
 
 
 ##### 9.5 Rotation 60° *目标：4L 4E*
-- [查看题目](images/level/60-rotation-c-w.png) 
+- [View](images/level/60-rotation-c-w.png) 
 + *4L4E*步骤：圆，圆，圆，线
 - *4L4E*解题思路：【待补充】。[参考图](solved/9.5.4L4E.png)
 
 
 ##### 9.6 Segment Trisection *目标：5L 6E*
-- [查看题目](images/level/divide3.png) 
+- [View](images/level/divide3.png) 
 + *5L6E*步骤：圆，圆，圆，线，线，圆，点
 - *5L6E*解题思路：【待补充】。[参考图](solved/9.6.5L6E.png)
 
 
 ##### 9.7 Segment Trisection\* *目标：8L 8E*
-- [查看题目](images/level/l-divide3.png) 
+- [View](images/level/l-divide3.png) 
 + *8L8E*步骤：线，线，线，线，线，线，线，线，点，点
 - *8L8E*解题思路：【待补充】。[参考图](solved/9.7.8L8E.png)
 
 
 ##### 9.8 Chord Trisection *目标：3L 4E 2V*
-- [查看题目](images/level/chord3.png) 
+- [View](images/level/chord3.png) 
 + *3L*步骤：线，定圆，线
 - *3L*解题思路：【待补充】。[参考图](solved/9.8.3L.png)
 + *4E*步骤：线，圆，圆，线
@@ -59,14 +59,14 @@
 
 
 ##### 9.9 Ratio 1 to 5 *目标：4L 5E 2V*
-- [查看题目](images/level/segment6.png) 
+- [View](images/level/segment6.png) 
 + *4L5E*步骤：线，圆，圆，圆，线，点
 - *4L5E*解题思路：【待补充】。[参考图](solved/9.9.4L5E.png)
 - *2V*解题思路：【待补充】。[参考图](solved/9.9.2V.png)
 
 
 ##### 9.10 Three Circles - 1 *目标：7L 10E*
-- [查看题目](images/level/3-circles-c.png) 
+- [View](images/level/3-circles-c.png) 
 + *7L*步骤：圆，圆，线，垂分，圆，圆，定圆
 - *7L*解题思路：【待补充】。[参考图](solved/9.10.7L.png)
 + *10E*步骤：线，线，圆，圆，垂分，圆，圆，圆
@@ -74,7 +74,7 @@
 
 
 ##### 9.11 Secant Bisection *目标：4L 5E 2V*
-- [查看题目](images/level/secant2.png) 
+- [View](images/level/secant2.png) 
 + *4L*步骤：圆，线，定圆，线
 - *4L*解题思路：【待补充】。[参考图](solved/9.11.4L.png)
 + *5E*步骤：圆，线，圆，圆，线
@@ -83,7 +83,7 @@
 
 
 ##### 9.12 Three Circles - 2 *目标：9L 14E*
-- [查看题目](images/level/3-circles-i.png) 
+- [View](images/level/3-circles-i.png) 
 + *9L*步骤：垂分，垂分，线，垂线，圆，圆，线，线，圆
 - *9L*解题思路：【待补充】。[参考图](solved/9.12.9L.png)
 + *14E*步骤：垂分，圆，圆，线，线，线，线，线，线，圆，圆，圆
