--- a/3.Gamma.md
+++ b/3.Gamma.md
@@ -38,7 +38,7 @@
 - [View](images/level/trapezoid-cut.png) 
 + *3L*步骤：垂分，垂分，线
 - *3L*解题思路：分别求两条边的中点。[参考图](solved/3.6.3L.png) [GIF](GIF/3.6.3L.gif)
-+ *5E*步骤：线，线，线，线，线 前四步顺序可以调换，作法不变
++ *5E*步骤：线，线，线，线，线 The first four steps are reversable
 - *5E*解题思路：延长腰得到三角形，求三角形中线。[参考图](solved/3.6.5E.png) [GIF](GIF/3.6.5E.gif)
 
 
