--- a/5.Epsilon.md
+++ b/5.Epsilon.md
@@ -1,80 +1,80 @@
 ##### 5.1 Parallel Line *目标：2L 4E*
 - [View](images/level/parallel.png) [知识点1](images/hints/Fact-RhombusSides.png) [知识点2](images/hints/Fact-RectCenter.png) 
 + *2L*步骤：垂线，垂线
-- *2L*解题思路：【待补充】。[参考图](solved/5.1.2L.png)
+- *2L*解题思路：【待补充】。[Ref.](solved/5.1.2L.png)
 + *4E*步骤：圆，线，圆，线
-- *4E*解题思路：【待补充】。[参考图](solved/5.1.4E.png)
+- *4E*解题思路：【待补充】。[Ref.](solved/5.1.4E.png)
 
 
 ##### 5.2 Parallelogram by Three Vertices *目标：4L 8E 3V*
 - [View](images/level/parallelogram3-v.png) 
 + *4L*步骤：线，线，平行，平行
-- *4L*解题思路：【待补充】。[参考图](solved/5.2.4L.png)
+- *4L*解题思路：【待补充】。[Ref.](solved/5.2.4L.png)
 + *8E*步骤：线，线，圆，圆，圆，圆，线，线
-- *8E*解题思路：【待补充】。[参考图](solved/5.2.8E.png)
-- *3V*解题思路：【待补充】。[参考图](solved/5.2.3V.png)
+- *8E*解题思路：【待补充】。[Ref.](solved/5.2.8E.png)
+- *3V*解题思路：【待补充】。[Ref.](solved/5.2.3V.png)
 
 
 ##### 5.3 Line Equidistant from Two Points - 1 *目标：2L 4E*
 - [View](images/level/line-along-points.png) 
 + *2L*步骤：线，平行
-- *2L*解题思路：【待补充】。[参考图](solved/5.3.2L.png)
+- *2L*解题思路：【待补充】。[Ref.](solved/5.3.2L.png)
 + *4E*步骤：圆，线，圆，线
-- *4E*解题思路：【待补充】。[参考图](solved/5.3.4E.png)
+- *4E*解题思路：【待补充】。[Ref.](solved/5.3.4E.png)
 
 
 ##### 5.4 Line Equidistant from Two Points - 2 *目标：3L 5E*
 - [View](images/level/line-between-points.png) 
 + *3L5E*步骤：垂分，线，线
-- *3L5E*解题思路：【待补充】。[参考图](solved/5.4.3L5E.png)
+- *3L5E*解题思路：【待补充】。[Ref.](solved/5.4.3L5E.png)
 
 
 ##### 5.5 Arithmetic Mean of Trapezoid Bases *目标：2L 5E*
 - [View](images/level/trapezoid-median.png) 
 + *2L*步骤：垂线，垂分
-- *2L*解题思路：【待补充】。[参考图](solved/5.5.2L.png)
+- *2L*解题思路：【待补充】。[Ref.](solved/5.5.2L.png)
 + *5E*步骤：圆，圆，线，线，线
-- *5E*解题思路：【待补充】。[参考图](solved/5.5.5E.png)
+- *5E*解题思路：【待补充】。[Ref.](solved/5.5.5E.png)
 
 
 ##### 5.6 Hash *目标：2L 4E 2V*
 - [View](images/level/hash.png) [2L4E草图](images/hints/Draft-Hash.png) 
 + *2L*步骤：线，平行
-- *2L*解题思路：【待补充】。[参考图](solved/5.6.2L.png)
+- *2L*解题思路：【待补充】。[Ref.](solved/5.6.2L.png)
 + *4E*步骤：圆，线，圆，线
-- *4E*解题思路：【待补充】。[参考图](solved/5.6.4E.png)
-- *2V*解题思路：【待补充】。[参考图](solved/5.6.2V.png)
+- *4E*解题思路：【待补充】。[Ref.](solved/5.6.4E.png)
+- *2V*解题思路：【待补充】。[Ref.](solved/5.6.2V.png)
 
 
 ##### 5.7 Shift Angle *目标：2L 6E*
 - [View](images/level/shift-angle.png) 
 + *2L*步骤：平行，平行
-- *2L*解题思路：【待补充】。[参考图](solved/5.7.2L.png)
+- *2L*解题思路：【待补充】。[Ref.](solved/5.7.2L.png)
 + *6E*步骤：线，圆，圆，圆，线，线
-- *6E*解题思路：【待补充】。[参考图](solved/5.7.6E.png)
+- *6E*解题思路：【待补充】。[Ref.](solved/5.7.6E.png)
 
 
 ##### 5.8 Circumscribed Square *目标：6L 11E*
 - [View](images/level/square-about-circle.png) 
 + *6L*步骤：垂线，垂线，垂线，圆，垂线，垂线
-- *6L*解题思路：【待补充】。[参考图](solved/5.8.6L.png)
+- *6L*解题思路：【待补充】。[Ref.](solved/5.8.6L.png)
 + *11E*步骤：垂线，圆，线，圆，圆，线，线，线，线
-- *11E*解题思路：【待补充】。[参考图](solved/5.8.11E.png)
+- *11E*解题思路：【待补充】。[Ref.](solved/5.8.11E.png)
 
 
 ##### 5.9 Square in Square *目标：6L 7E*
 - [View](images/level/square-in-square.png) [知识点](images/hints/Fact-PointSymmetry.png) 
 + *6L*步骤：圆，平行，线，垂线，垂线，垂线
-- *6L*解题思路：【待补充】。[参考图](solved/5.9.6L.png)
+- *6L*解题思路：【待补充】。[Ref.](solved/5.9.6L.png)
 + *7E*步骤：线，线，圆，线，线，线，线
-- *7E*解题思路：【待补充】。[参考图](solved/5.9.7E.png)
+- *7E*解题思路：【待补充】。[Ref.](solved/5.9.7E.png)
 
 
 ##### 5.10 Regular Hexagon *目标：7L 8E 2V*
 - [View](images/level/hexagon-by-side.png) [知识点](images/hints/Fact-Hexagon.png) 
 + *7L*步骤：圆，圆，线，线，平行，平行，垂分
-- *7L*解题思路：【待补充】。[参考图](solved/5.10.7L.png)
+- *7L*解题思路：【待补充】。[Ref.](solved/5.10.7L.png)
 + *8E*步骤：圆，圆，圆，线，线，线，线，线
-- *8E*解题思路：【待补充】。[参考图](solved/5.10.8E.png)
-- *2V*解题思路：【待补充】。[参考图](solved/5.10.2V.png)
+- *8E*解题思路：【待补充】。[Ref.](solved/5.10.8E.png)
+- *2V*解题思路：【待补充】。[Ref.](solved/5.10.2V.png)
 
